--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -41,6 +41,37 @@
                         <a class="J_menuItem" href="{:url('admin/level/lst')}">级别管理</a>
                     </li>
                     <li>
+                        <a class="J_menuItem" href="{:url('admin/selfattribute/lst')}">自定义属性</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="graph_peity.html">Peity</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="graph_sparkline.html">Sparkline</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="graph_metrics.html">图表组合</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#">
+                    <i class="fa fa-car"></i>
+                    <span class="nav-label">系统管理</span>
+                    <span class="fa arrow"></span>
+                </a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/brand/lst')}">品牌管理</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/carmodel/lst')}">车型管理</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/level/lst')}">级别管理</a>
+                    </li>
+                    <li>
                         <a class="J_menuItem" href="graph_rickshaw.html">Rickshaw</a>
                     </li>
                     <li>
