--- a/application/admin/view/selfattribute/paginate1.html
+++ b/application/admin/view/selfattribute/paginate1.html
@@ -26,15 +26,15 @@
                                     <button type="button" class="btn btn-danger btn-sm">否</button>
                                     {/if}
                                 </td>
-                                <td><input type="text" value="{$vo.order}" name=""></td>
+                                <td><input type="text" value="{$vo.order}" name="{$vo.id}"></td>
                                 <td>
                                     <div class="btn-group open">
                                         <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="true">操作 <span class="caret"></span>
                                         </button>
                                         <ul class="dropdown-menu">
-                                            <li><a href="">修改</a>
+                                            <li><a href="{:url('admin/selfattribute/upd',array('id'=>$vo.id))}">修改</a>
                                             </li>
-                                            <li><a href="">删除</a>
+                                            <li><a href="javascript:if(confirm('确认删除？')) location='{:url('admin/selfattribute/del',array('id'=>$vo.id))}'">删除</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -55,4 +55,5 @@
             </div>
         </div>
     </div>
+
 </div>
